# SubgraphMatching_Spectral

./: .bash_history  .gitignore  1  CMakeLists.txt  README.md  scp.sh
.config/pulse/: cookie
Spectra/: DavidsonSymEigsSolver.h  GenEigsBase.h  GenEigsSolver.h  JDSymEigsBase.h  SymEigsBase.h  SymEigsSolver.h
configuration/: config.h
experiment_script/: DenseOrSparse.sh  allDataSet.sh  performance.sh  performance2.sh  singleDataSet.sh  singleDataSet2.sh  test.sh
experiment_script/wordnet/: LDF.sh  dense.sh  performance.sh  performance20.sh  sparse.sh
graph/: graph.cpp  graph.h
matching/: CMakeLists.txt  EvaluateQuery.cpp  EvaluateQuery.h  Experiments.cpp  Experiments.h  FilterVertices.cpp  FilterVertices.h  GenerateFilteringPlan.cpp  GenerateFilteringPlan.h  GenerateQueryPlan.cpp  GenerateQueryPlan.h  GrM.h  StudyPerformance.cpp  StudyPerformance.h  eigenHelper.cpp  eigenHelper.h  main.cpp  matchingcommand.cpp  matchingcommand.h
matching/KF/: cs.h  spectra.cpp  spectra.h
performance_build/: CMakeCache.txt  Makefile  cmake_install.cmake
performance_build/graph/: Makefile  cmake_install.cmake
performance_build/matching/: EdgeListConverter.out  GraphConverter.out  Makefile  ReassignLabel  SelectEdge  cmake_install.cmake
performance_build/utility/: Makefile  cmake_install.cmake
performance_experiment/: eu2005-test.csv  makefiles.sh  patents-test.csv  test.sh
performance_experiment/dblp/: dblp_dense16.csv  dblp_dense24.csv  dblp_dense32.csv  dblp_sparse16.csv  dblp_sparse24.csv  dblp_sparse32.csv
test/: query_generator.py
test/tests/: make_queries.sh  (+5 more)
(+3627 files in other folders)
